--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,11 +26,12 @@
     <TextView
             android:text="GO ALL IN"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" tools:layout_editor_absoluteY="85dp"
+            android:layout_height="wrap_content"
             android:id="@+id/textView" android:textColor="@android:color/white"
             android:textSize="46sp" android:fontFamily="montserrat" android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
     <TextView
             android:text="ON GOING ALL OUT"
             android:layout_width="wrap_content"
@@ -52,8 +53,9 @@
     <Button
             android:text="GET STARTED"
             android:layout_width="0dp"
-            android:layout_height="wrap_content" tools:layout_editor_absoluteY="656dp"
+            android:layout_height="wrap_content"
             android:id="@+id/button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:fontFamily="montserrat"
-            android:textColor="@android:color/white" android:background="@drawable/swoosh_button"/>
+            android:textColor="@android:color/white" android:background="@drawable/swoosh_button"
+            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="@+id/imageView"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
