--- a/app/src/main/res/layout/activity_league.xml
+++ b/app/src/main/res/layout/activity_league.xml
@@ -13,7 +13,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop" android:contentDescription="@string/background_image"/>
     <ImageView
             android:layout_width="86dp"
             android:layout_height="39dp" app:srcCompat="@drawable/swooshlogo"
@@ -21,7 +21,7 @@
             android:scaleType="fitCenter" android:layout_marginTop="24dp"
             app:layout_constraintTop_toTopOf="@+id/imageView" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/app_logo" />
     <TextView
             android:text="Desired League"
             android:layout_width="wrap_content"
@@ -49,12 +49,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/toggleButton2" android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp" android:textOff="Womens" android:textOn="Womens"
-                android:background="@drawable/swoosh_toggle"/>
+                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"/>
         <ToggleButton
                 android:text="ToggleButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/toggleButton3" android:textOff="Co-Ed"
-                android:textOn="Co-Ed" android:background="@drawable/swoosh_toggle"/>
+                android:textOn="Co-Ed" android:background="@drawable/swoosh_toggle"
+                android:textColor="@android:color/white"/>
     </LinearLayout>
     <Button
             android:text="Next"
