--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,7 @@
             android:text="GET STARTED"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+            android:id="@+id/getStartedBtn" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:fontFamily="montserrat"
             android:textColor="@android:color/white" android:background="@drawable/swoosh_button"
             android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="@+id/imageView"/>
